@@ -141,6 +141,13 @@
     <dependency>
       <groupId>com.google.cloud</groupId>
       <artifactId>google-cloud-bigtable</artifactId>
+      <version>2.45.1</version>
+      <exclusions>
+        <exclusion>
+          <groupId>javax.annotation</groupId>
+          <artifactId>javax.annotation-api</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
     <dependency>
@@ -282,6 +289,13 @@
     <dependency>
       <groupId>io.micronaut</groupId>
       <artifactId>micronaut-inject</artifactId>
+      <scope>compile</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>io.micronaut</groupId>
+      <artifactId>micronaut-inject-java</artifactId>
+      <scope>compile</scope>
     </dependency>
 
     <dependency>
@@ -352,7 +366,7 @@
     <dependency>
       <groupId>io.micronaut</groupId>
       <artifactId>micronaut-jackson-databind</artifactId>
-      <version>4.4.6</version>
+      <version>4.6.6</version>
     </dependency>
 
     <dependency>
@@ -498,6 +512,12 @@
       <artifactId>gcloud</artifactId>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>jakarta.inject</groupId>
+      <artifactId>jakarta.inject-api</artifactId>
+      <version>2.0.1</version>
+    </dependency>
   </dependencies>
 
   <build>
@@ -520,12 +540,8 @@
         <version>3.13.0</version>
         <configuration>
           <release>${release.version}</release>
-          <source>${jdk.version}</source>
-          <target>${jdk.version}</target>
-          <encoding>UTF-8</encoding>
-          <enablePreview>true</enablePreview>
           <compilerArgs>
-            <arg>--enable-preview</arg>
+            <arg>-parameters</arg>
           </compilerArgs>
           <annotationProcessorPaths>
             <path>
